# chasingclaw

./: .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  core_agent_lines.sh  pyproject.toml
.github/workflows/: windows-portable.yml  windows-tauri-desktop.yml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
chasingclaw/: __init__.py  __main__.py
chasingclaw/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
chasingclaw/bus/: __init__.py  queue.py
chasingclaw/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
chasingclaw/cli/: __init__.py  commands.py
chasingclaw/config/: __init__.py  loader.py  schema.py
chasingclaw/cron/: __init__.py  service.py
chasingclaw/heartbeat/: __init__.py
chasingclaw/providers/: __init__.py  litellm_provider.py  registry.py
chasingclaw/session/: __init__.py  manager.py
chasingclaw/skills/: README.md
chasingclaw/utils/: __init__.py  helpers.py
chasingclaw/webui/: __init__.py  server.py  ui.html  ui.html.bak
desktop/tauri/: README.md  package.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
scripts/windows/: build-portable.bat  build-portable.ps1  build-tauri-desktop.bat  build-tauri-desktop.ps1  chasingclaw-startup-task.bat  chasingclaw-startup-task.ps1  (+3 more)
tests/: test_cli_input.py  test_docker.sh  test_email_channel.py  test_tool_validation.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
(+19 files in other folders)
